Remove use of deprecated Long initializer and remove weird header